--- a/front-end/flexbox/index.html
+++ b/front-end/flexbox/index.html
@@ -1,33 +1,45 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <link href="assets/css/index.css" rel="stylesheet" />
+    <link
+      href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sith Daniel Galindo</title>
   </head>
-  <body>
-    <header>
-      <button class="purple">Logo</button>
+  <body class="w-full min-h-screen h-auto">
+    <header class="w-full min-h-screen h-auto flex flex-col bg-blue-500">
+      <div class="w-full h-16 flex flex-row flex-no-wrap justify-between">
+        <picture class="h-12 overflow-hidden">
+          <img src="assets/img/logo.png" alt="" />
+        </picture>
+        <nav class="text-white py-4">
+          <a class="text-lg mx-4">Home</a>
+          <a class="text-lg mx-4">About</a>
+          <a class="text-lg mx-4">Producto</a>
+          <a class="text-lg mx-4">Reviews</a>
+        </nav>
+        <button class="bg-white text-blue-400 rounded-full px-8">
+          Buy now
+        </button>
+      </div>
       <div>
-        <button class="red">Products</button>
-        <button class="blue">Team</button>
+        <div>
+          <h1>Best Landing Page For Online Product Marketing</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse
+            obcaecati hic consequuntur vitae fugit, assumenda cupiditate, ex
+            atque delectus, at recusandae? Harum quod blanditiis ipsum, fuga
+            laborum officiis quas ipsam.
+          </p>
+          <button>Order Now</button>
+        </div>
+        <div>
+          <img src="assets/img/watch-1.png" alt="" />
+        </div>
       </div>
     </header>
-    <content>
-      <div class="left">
-        <div class="message"></div>
-        <div class="message"></div>
-        <div class="message"></div>
-      </div>
-      <div class="right">
-        <p>This box is perfectly centered.</p>
-      </div>
-    </content>
-    <footer>
-      <button class="red">Contact</button>
-      <button class="blue">Careers</button>
-      <button class="green">About</button>
-    </footer>
   </body>
 </html>
