--- a/front-end/flexbox/index.html
+++ b/front-end/flexbox/index.html
@@ -41,5 +41,25 @@
         </div>
       </div>
     </header>
+    <about class="w-full h-auto flex flex-row flex-no-wrap">
+      <div class="w-1/2">
+        <h3></h3>
+        <h2></h2>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
+          veritatis amet repellat molestiae culpa provident. Eius placeat
+          facilis deleniti exercitationem rerum blanditiis totam. Eius, tempora.
+          Tempora minus et veniam fugiat!
+        </p>
+        <ul>
+          <li>Atractive Interface with many options</li>
+          <li>Live Chat and Instant Notification</li>
+          <li>Instant App with Unlimited Features</li>
+        </ul>
+      </div>
+      <div class="w-1/2">
+        <img src="" alt="" />
+      </div>
+    </about>
   </body>
 </html>
