--- a/form/index.html
+++ b/form/index.html
@@ -6,12 +6,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Forms</title>
   <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+  <script>
+    let carrito = []
+
+    function addCarrito() {
+      let producto = prompt("Escribe tu producto")
+      carrito.push(producto)
+      impresion()
+    }
+    function impresion() {
+      console.log(`
+        El carrito tiene ${carrito.length} elementos
+      `, carrito)
+    }
+
+  </script>
 </head>
 
 <body class="w-full min-h-screen flex flex-col items-center justify-center bg-gray-600">
   <span class="inline-flex rounded-md shadow-sm">
     <button type="button"
-      class="inline-flex items-center px-4 py-2 border border-transparent text-sm leading-5 font-medium rounded-md text-white bg-purple-600 hover:bg-purple-500 focus:outline-none focus:border-purple-700 focus:shadow-outline-purple active:bg-purple-700 transition ease-in-out duration-150">
+      class="inline-flex items-center px-4 py-2 border border-transparent text-sm leading-5 font-medium rounded-md text-white bg-purple-600 hover:bg-purple-500 focus:outline-none focus:border-purple-700 focus:shadow-outline-purple active:bg-purple-700 transition ease-in-out duration-150"
+      onclick="addCarrito()">
       <svg fill="currentColor" viewBox="0 0 20 20" class="-ml-1 mr-2 h-5 w-5">
         <path
           d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z">
